--- a/config.yaml
+++ b/config.yaml
@@ -20,13 +20,13 @@ rate_limits:
   read_daily: 1000
   safety_buffer: 2
   min_interval_seconds: 10
-
+#    - WeightTraining
+#    - Ride 
 activities:
   types:
     - Run
-    - Ride
-    - WeightTraining
-  include_all_types: true   # include all Strava activity types by default
+
+  include_all_types: false   # include all Strava activity types by default
   group_other_types: true   # when true, map non-featured types into smart buckets
   other_bucket: OtherSports # fallback bucket for unknown activity categories
   group_aliases: {}         # optional explicit group overrides, e.g. {SkiErg: WinterSports}
