--- a/config.yaml
+++ b/config.yaml
@@ -25,6 +25,7 @@ rate_limits:
 activities:
   types:
     - Run
+    - NordicSki
 
   include_all_types: false   # include all Strava activity types by default
   group_other_types: true   # when true, map non-featured types into smart buckets
